--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,10 +1,78 @@
-﻿<Window x:Class="ChessB.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ChessB"
+    x:Name="mainWindow" x:Class="ChessB.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow">
-   
+        Title="Chess" Icon="bP.PNG" Background="#FFD4CACA" Width="800" Height="800">
+
+    <Grid x:Name="UiGrid" Margin="0" ShowGridLines="True">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="4*"/>
+        </Grid.ColumnDefinitions>
+        <Viewbox x:Name="boardVB" Grid.Column="1" Grid.Row="1" Stretch="Fill">
+            <Canvas x:Name="boardCanvas" Height="600" Width="600"/>
+
+        </Viewbox>
+        <Viewbox x:Name="whiteCapturedVB" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Grid x:Name="whiteCapturedGrid" HorizontalAlignment="Left">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Label x:Name="whiteCapturedLabel" Content="Score" Grid.Column="16" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Center" FontSize="18"/>
+
+            </Grid>
+        </Viewbox>
+        <Viewbox x:Name="blackCapturedVB" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Grid x:Name="blackCapturedGrid" HorizontalAlignment="Left">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Label x:Name="blackCapturedLabel" Content="Score" Grid.Column="16" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Center" FontSize="18"/>
+
+            </Grid>
+        </Viewbox>
+        <Viewbox x:Name="chessNotationVB" Grid.Column="2" Margin="0" Grid.Row="1"/>
+    </Grid>
+
 </Window>
