--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -44,12 +44,12 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Label x:Name="whiteCapturedLabel" Content="" Grid.Column="16" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Center" FontSize="18"/>
+                <Label x:Name="whiteCapturedLabel" Content="" Grid.Column="16" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Center" FontSize="11"/>
 
             </Grid>
         </Viewbox>
         <Viewbox x:Name="blackCapturedVB" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Grid x:Name="blackCapturedGrid" HorizontalAlignment="Left">
+            <Grid x:Name="blackCapturedGrid">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
@@ -69,7 +69,7 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Label x:Name="blackCapturedLabel" Content="" Grid.Column="16" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Center" FontSize="18"/>
+                <Label x:Name="blackCapturedLabel" Content="" Grid.Column="16" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Center" FontSize="11"/>
             </Grid>
         </Viewbox>
         <Viewbox x:Name="chessNotationVB" Grid.Column="2" Margin="0" Grid.Row="1"/>
