Added promotion radio button functionality

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -84,14 +84,15 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
+
                 <Image Grid.Column="0" Grid.Row="0" Source="Images/wQ.PNG" Stretch="Fill" Width="15" Height="15" />
                 <Image Grid.Column="1" Grid.Row="0" Source="Images/wR.PNG" Stretch="Fill" Width="15" Height="15" />
                 <Image Grid.Column="2" Grid.Row="0" Source="Images/wN.PNG" Stretch="Fill" Width="15" Height="15" />
                 <Image Grid.Column="3" Grid.Row="0" Source="Images/wB.PNG" Stretch="Fill" Width="15" Height="15" />
-                <RadioButton x:Name="wQRB" Grid.Column="0" Grid.Row="1" Margin="0" Height="14" VerticalAlignment="Top"/>
-                <RadioButton x:Name="wRRB" Grid.Column="1" Grid.Row="1" Margin="0"/>
-                <RadioButton x:Name="wNRB" Grid.Column="2" Grid.Row="1" Margin="0"/>
-                <RadioButton x:Name="wBRB" Grid.Column="3" Grid.Row="1" Margin="0"/>
+                <RadioButton x:Name="wQRB" Grid.Column="0" Grid.Row="1" Margin="0" Height="14" VerticalAlignment="Top" IsChecked="True" Checked="WQRB_Checked"/>
+                <RadioButton x:Name="wRRB" Grid.Column="1" Grid.Row="1" Margin="0" Checked="WRRB_Checked"/>
+                <RadioButton x:Name="wNRB" Grid.Column="2" Grid.Row="1" Margin="0" Checked="WNRB_Checked"/>
+                <RadioButton x:Name="wBRB" Grid.Column="3" Grid.Row="1" Margin="0" Checked="WBRB_Checked"/>
             </Grid>
         </Viewbox>
         <Viewbox x:Name="whitePromotionVB" Grid.Column="2" Grid.Row="0" Margin="0" Stretch="Fill" HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -110,10 +111,10 @@
                 <Image Grid.Column="1" Grid.Row="0" Source="bR.PNG" Stretch="Fill" Width="15" Height="15" />
                 <Image Grid.Column="2" Grid.Row="0" Source="Images/bN.PNG" Stretch="Fill" Width="15" Height="15" />
                 <Image Grid.Column="3" Grid.Row="0" Source="Images/bB.PNG" Stretch="Fill" Width="15" Height="15" />
-                <RadioButton x:Name="bQRB" Grid.Column="0" Grid.Row="1" Margin="0"/>
-                <RadioButton x:Name="bRRB" Grid.Column="1" Grid.Row="1" Margin="0"/>
-                <RadioButton x:Name="bNRB" Grid.Column="2" Grid.Row="1" Margin="0"/>
-                <RadioButton x:Name="bBRB" Grid.Column="3" Grid.Row="1" Margin="0"/>
+                <RadioButton x:Name="bQRB" Grid.Column="0" Grid.Row="1" Margin="0" IsChecked="True" Checked="BQRB_Checked"/>
+                <RadioButton x:Name="bRRB" Grid.Column="1" Grid.Row="1" Margin="0" Checked =" BRRB_Checked"/>
+                <RadioButton x:Name="bNRB" Grid.Column="2" Grid.Row="1" Margin="0" Checked =" BNRB_Checked"/>
+                <RadioButton x:Name="bBRB" Grid.Column="3" Grid.Row="1" Margin="0" Checked =" BBRB_Checked"/>
             </Grid>
         </Viewbox>
     </Grid>
