--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,24 +6,26 @@
     xmlns:local="clr-namespace:ChessB"
     x:Name="mainWindow" x:Class="ChessB.MainWindow"
         mc:Ignorable="d"
-        Title="Chess" Icon="bP.PNG" Background="#FF292727" Width="800" Height="800" WindowStartupLocation="CenterScreen" WindowStyle="ThreeDBorderWindow">
+        Title="Chess" Icon="bP.PNG" Background="#FFE6DEDE" Width="800" Height="800" WindowStartupLocation="CenterScreen" WindowStyle="ThreeDBorderWindow">
 
     <Grid x:Name="UiGrid" Margin="0">
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="1.5*"/>
             <RowDefinition Height="12*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
+
             <ColumnDefinition Width="12*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
-        <Viewbox x:Name="boardVB" Grid.Column="1" Grid.Row="1">
+        <Viewbox x:Name="boardVB" Grid.Column="0" Grid.Row="1" RenderTransformOrigin="0.5,0.5" >
+
+
             <Canvas x:Name="boardCanvas" MinWidth="200" MinHeight="200" Width="500" Height="500" />
 
         </Viewbox>
-        <Viewbox x:Name="whiteCapturedVB" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Viewbox x:Name="whiteCapturedVB" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Grid x:Name="whiteCapturedGrid" HorizontalAlignment="Left">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -48,7 +50,7 @@
 
             </Grid>
         </Viewbox>
-        <Viewbox x:Name="blackCapturedVB" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Viewbox x:Name="blackCapturedVB" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Grid x:Name="blackCapturedGrid">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -72,7 +74,10 @@
                 <Label x:Name="blackCapturedLabel" Content="" Grid.Column="16" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Center" FontSize="11"/>
             </Grid>
         </Viewbox>
-        <Viewbox x:Name="chessNotationVB" Grid.Column="2" Margin="0" Grid.Row="1" Stretch="Fill"/>
+        <Viewbox x:Name="chessNotationVB" Grid.Column="2" Margin="0" Grid.Row="1" Stretch="Fill">
+            <ListBox x:Name="moveListBox" Height="142" Width="216" FontSize="11" FontFamily="Calibri" Background="#00E8E3E3"/>
+        </Viewbox>
+
         <Viewbox x:Name="BlackPromotionVB" Grid.Column="2" Grid.Row="2" Margin="0" Stretch="Fill" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Grid.RowDefinitions>
@@ -118,6 +123,7 @@
                 <RadioButton x:Name="bBRB" Grid.Column="3" Grid.Row="1" Margin="0" Checked =" BBRB_Checked"/>
             </Grid>
         </Viewbox>
+
     </Grid>
 
 </Window>
