--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -19,6 +19,7 @@
             <ColumnDefinition Width="15*"/>
             <ColumnDefinition Width="15*"/>
             <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Viewbox x:Name="boardVB" Grid.Column="0" Grid.Row="1" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" >
 
@@ -76,11 +77,7 @@
             </Grid>
         </Viewbox>
         <Viewbox x:Name="chessNotationVB" Grid.Column="2" Margin="0" Grid.Row="1" Stretch="Fill">
-            <ListBox x:Name="moveListBox" Height="142" Width="216" FontSize="11" FontFamily="Calibri" Background="#00E8E3E3"/>
+            <ListBox x:Name="moveListBox" Height="142" Width="216" FontSize="11" FontFamily="Calibri" Background="#005D1414"/>
         </Viewbox>
-
-
-
-
     </Grid>
 </Window>
