--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -18,7 +18,7 @@
 
             <ColumnDefinition Width="15*"/>
             <ColumnDefinition Width="15*"/>
-            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="13*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Viewbox x:Name="boardVB" Grid.Column="0" Grid.Row="1" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" Margin="0" >
@@ -77,7 +77,16 @@
             </Grid>
         </Viewbox>
         <Viewbox x:Name="chessNotationVB" Grid.Column="2" Margin="0" Grid.Row="1" Stretch="Fill">
-            <ListBox x:Name="moveListBox" Height="142" Width="216" FontSize="11" FontFamily="Calibri" Background="#005D1414"/>
+            <DataGrid AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserDeleteRows="False" HorizontalScrollBarVisibility="Disabled"
+            Height="200" 
+            Name="dataGrid1" 
+             Width="200" FontWeight="Bold" GridLinesVisibility="None" >
+                <DataGrid.Columns >
+                    <DataGridTextColumn Binding="{Binding Path= moveNumber}"  Header="Move" Width="50" FontSize="11" CanUserResize="False" CanUserSort="False"/>
+                    <DataGridTextColumn Binding="{Binding Path= whiteChessNotation}" Header="White" Width="75" FontSize="11" CanUserResize="False" CanUserSort="False"/>
+                    <DataGridTextColumn Binding="{Binding Path= blackChessNotation}"  Header="Black" Width="75" FontSize="11" CanUserResize="False" CanUserSort="False" />
+                </DataGrid.Columns>
+            </DataGrid>
         </Viewbox>
     </Grid>
 </Window>
