--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -88,5 +88,10 @@
                 </DataGrid.Columns>
             </DataGrid>
         </Viewbox>
+        <Viewbox Grid.Column="1" Height="72" Margin="0" Width="318">
+            <Border BorderBrush="Black" BorderThickness="1" Height="110" Width="626" Margin="0,0,0,30">
+                <TextBlock x:Name="blackTimer" Height="100" Margin="0" TextWrapping="Wrap" Text="10:00" Width="495" FontSize="22" FontWeight="Bold" TextAlignment="Center"/>
+            </Border>
+        </Viewbox>
     </Grid>
 </Window>
