--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,11 +8,13 @@
         mc:Ignorable="d"
         Title="Chess" Icon="bP.PNG"  Width="1000" Height="800" WindowStartupLocation="CenterScreen" WindowStyle="ThreeDBorderWindow" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}">
 
-    <Grid x:Name="UiGrid" Margin="0">
+    <Grid x:Name="UiGrid" Margin="0" ShowGridLines="False">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1.5*"/>
-            <RowDefinition Height="12*"/>
-            <RowDefinition Height="1.5*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="18*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
 
@@ -21,13 +23,13 @@
             <ColumnDefinition Width="13*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Viewbox x:Name="boardVB" Grid.Column="0" Grid.Row="1" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" Margin="0" >
+        <Viewbox x:Name="boardVB" Grid.Column="0" Grid.Row="1" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" Grid.RowSpan="3" Margin="0" >
 
 
             <Canvas x:Name="boardCanvas" MinWidth="200" MinHeight="200" Width="500" Height="500" />
 
         </Viewbox>
-        <Viewbox x:Name="whiteCapturedVB" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Viewbox x:Name="whiteCapturedVB" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Grid x:Name="whiteCapturedGrid" HorizontalAlignment="Left">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -52,7 +54,7 @@
 
             </Grid>
         </Viewbox>
-        <Viewbox x:Name="blackCapturedVB" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Viewbox x:Name="blackCapturedVB" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Grid x:Name="blackCapturedGrid">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -76,18 +78,28 @@
                 <Label x:Name="blackCapturedLabel" Content="" Grid.Column="16" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Center" FontSize="11"/>
             </Grid>
         </Viewbox>
-        <Viewbox x:Name="chessNotationVB" Grid.Column="2" Margin="0" Grid.Row="1" Stretch="Fill">
+        <Viewbox x:Name="chessNotationVB" Grid.Column="2" Margin="0" Grid.Row="2" Stretch="Fill">
             <DataGrid AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserDeleteRows="False" HorizontalScrollBarVisibility="Disabled" CanUserResizeRows="False"
             Height="200" 
             Name="dataGrid1" 
-             Width="200" FontWeight="Bold" GridLinesVisibility="None" >
+             Width="200" FontWeight="Bold" GridLinesVisibility="None" BorderBrush="Black" >
                 <DataGrid.Columns >
                     <DataGridTextColumn Binding="{Binding Path= moveNumber}"  Header="Move" Width="50" FontSize="11" CanUserResize="False" CanUserSort="False"/>
                     <DataGridTextColumn Binding="{Binding Path= whiteChessNotation}" Header="White" Width="75" FontSize="11" CanUserResize="False" CanUserSort="False"/>
                     <DataGridTextColumn Binding="{Binding Path= blackChessNotation}"  Header="Black" Width="75" FontSize="11" CanUserResize="False" CanUserSort="False" />
                 </DataGrid.Columns>
             </DataGrid>
-        </Viewbox>
 
+        </Viewbox>
+        <Viewbox Grid.Column="2" Grid.Row="1" Stretch="Fill">
+            <Border BorderBrush="Black" BorderThickness="1" Height="50" Width="202">
+                <TextBlock Margin="0" TextWrapping="Wrap" Text="10:00" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </Border>
+        </Viewbox>
+        <Viewbox Grid.Column="2" Grid.Row="3" Stretch="Fill">
+            <Border BorderBrush="Black" BorderThickness="1" Height="50" Width="202">
+                <TextBlock Margin="0" TextWrapping="Wrap" Text="10:00" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </Border>
+        </Viewbox>
     </Grid>
 </Window>
