--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -91,12 +91,12 @@
             </DataGrid>
 
         </Viewbox>
-        <Viewbox Grid.Column="2" Grid.Row="1" Stretch="Fill">
+        <Viewbox x:Name="blackTimerVB" Grid.Column="2" Grid.Row="1" Stretch="Fill">
             <Border x:Name="blackTimerBorder" BorderBrush="Black" BorderThickness="1" Height="50" Width="202">
                 <TextBlock x:Name="blackTimerTB" Margin="0" TextWrapping="Wrap" Text="10:00" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             </Border>
         </Viewbox>
-        <Viewbox Grid.Column="2" Grid.Row="3" Stretch="Fill">
+        <Viewbox x:Name="whiteTimerVB" Grid.Column="2" Grid.Row="3" Stretch="Fill">
             <Border BorderBrush="Black" BorderThickness="1" Height="50" Width="202">
                 <TextBlock x:Name="whiteTimerTB" Margin="0" TextWrapping="Wrap" Text="10:00" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             </Border>
